prevent line wrap for links in page content

--- a/src/styles/site/_content.styl
+++ b/src/styles/site/_content.styl
@@ -36,6 +36,7 @@
     font-weight: $content-link-weight
     text-decoration: $content-link-decoration
     transition: $link-transition, text-decoration $transition-timing
+    white-space: nowrap
     &:active
     &:focus
     &:link
